--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 .container {
-    background-color: aquamarine;
+    position: absolute;
+    left: 40%;
+    right: 40;
+}
+h2 {
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    opacity: 0.7;
+    font-style: italic;
+    color: black
+}
+h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-style: bolder;
+ 
+}
+.text {
+    font-style: italic;
+    font-family: 'Courier New', Courier, monospace;
 }
